--- a/artstation.html
+++ b/artstation.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/guanabara" target="_blank">ACESSE</a>
+    <img src="imagens/tela-artstation.jpg" alt="ArtStation">
+    <a href="https://ramone3d.artstation.com/" target="_blank">ACESSE</a>
 </body>
 </html>
